# durations

./: README.md  pyproject.toml
.circleci/: config.yml
durations_nlp/: __init__.py  constants.py  duration.py  helpers.py  parser.py  scales.py
tests/: test_duration.py  test_helpers.py  test_parser.py  test_scale.py
